# libcmdsuzdal

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
.stuff/: README.md
.stuff/00_aborted_army/: army.h  armytest.cpp
doc/reference/: png.md  uci-specification.md
include/cmdsuzdal/: army.h  bbdefines.h  bitboard.h  chessboard.h  chessdefines.h  chessengine.h  chessgame.h  chessmove.h  fen.h  fenrecord.h  randomengine.h
src/: army.cpp  bbdefines.cpp  bitboard.cpp  chessboard.cpp  chessdefines.cpp  chessgame.cpp  chessmove.cpp  fen.cpp  fenrecord.cpp  randomengine.cpp
test/: CMakeLists.txt  armytest.cpp  bbdefinestest.cpp  bitboardtest.cpp  chessboardtest.cpp  chessgametest.cpp  chessmovetest.cpp  fenrecordtest.cpp  fentest.cpp  randomenginetest.cpp
